--- a/quartz/styles/callouts.scss
+++ b/quartz/styles/callouts.scss
@@ -3,7 +3,6 @@
 
 .callout {
   border: 2px dashed var(--border);
-  background-color: var(--bg);
   border-radius: 8px;
   padding: 0 1rem;
   overflow-y: hidden;
